--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/lisahtoledo/newedup#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "uuid": "^7.0.1"
   }
 }
