--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/lisahtoledo/newedup#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.4.0",
     "uuid": "^7.0.1"
   }
