--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bcrypt": "^4.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
+    "express-session": "1.17.0",
     "mysql": "^2.18.1",
     "nunjucks": "^3.2.0",
     "passport": "^0.4.1",
